# y-agent

./: .gitignore  .symlinks  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  migration_entity.sql  migration_reminder.sql  migration_share_password.sql  samconfig.toml  template.yaml  todo.md
api/: pyproject.toml  run.sh
api/src/api/: app.py  main.py  service_finance_derived.py
api/src/api/controller/: auth.py  bot_config.py  calendar_event.py  chat.py  claude.py  cookies.py  dev_worktree.py  email.py  entity.py  entity_link_relation.py  entity_note_relation.py  entity_rss_relation.py  file.py  finance.py  git.py  health.py  inline.py  link.py  link_todo_relation.py  model_usage.py  note.py  note_todo_relation.py  notify.py  reminder.py  routine.py  rss_feed.py  tag.py  telegram.py  terminal.py  (+5 more)
api/tests/: test_attach_image_delivery.py  test_auth.py  test_bot_config_api.py  test_chat_images.py  test_chat_notify.py  test_export_pdf.py  test_file_delete.py  test_finance_api_services.py  test_telegram_images.py  test_telegram_webhook_routing.py  test_usage_api.py  test_usage_limit_api.py
worker/: handler.py  pyproject.toml
worker/src/worker/: link_downloader.py  main.py  monitor.py  process_manager.py  runner.py  tasks.py
worker/tests/: test_check_claude_status.py  test_claude_code_runner.py  test_claude_tui_runner.py  test_codex_monitor.py  test_codex_runner.py  test_gemini_monitor.py  test_gemini_runner.py  test_grok_monitor.py  test_grok_runner.py  test_pi_monitor.py  test_pi_runner.py  test_post_hooks.py  test_reasoning_effort.py  test_runner_tier.py  test_steer_images.py  test_steer_race_reconciliation.py  test_telegram_assistant_images.py  test_telegram_user_images.py
(+595 files in other folders)
