[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "y-agent-api"
version = "0.4.0"
description = "REST API for y-agent"
requires-python = ">=3.11"
dependencies = [
    "y-agent-storage",
    "y-agent-agent",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.0.0",
    "PyJWT>=2.8.0",
    "google-auth>=2.29.0",
    "requests>=2.31.0",
    "celery>=5.3.0",
    "python-multipart>=0.0.22",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
    "fava>=1.30.12",
]

[dependency-groups]
# pypdf is used only by tests/test_export_pdf.py to assert the PDF outline; the
# real render itself needs weasyprint + pdftotext on the host (integration test
# skips when they are absent).
dev = ["pypdf>=4.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.uv.sources]
y-agent-storage = { workspace = true }
y-agent-agent = { workspace = true }
