[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "y-agent-worker"
version = "0.4.0"
description = "Background tasks for y-agent"
requires-python = ">=3.11"
dependencies = [
    "y-agent-storage",
    "y-agent-agent",
    "python-dotenv",
    "loguru>=0.7.3",
    "celery>=5.3.0",
    "boto3>=1.28.0",
    "httpx>=0.27.0",
    "readability-lxml>=0.8.1",
    "markdownify>=0.11.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[tool.uv.sources]
y-agent-storage = { workspace = true }
y-agent-agent = { workspace = true }
